--- a/blog.html
+++ b/blog.html
@@ -7,41 +7,42 @@
 
   <body>
 
+    <div style="background-image:url('images/header1.jpg')">
+          <h1>AYA TALK BLOG</h1>
+          <h3 class="sec-header">Say your word before it dies, it will know its path.</h3>
 
-<div style="background-image:url('images/header1.jpg')">
-      <h1>AYA TALK BLOG</h1>
+          <div class="right-links">
+            <p><a href="aboutme.html">About me</a>
+               <a href="aboutme.html">About me</a>
+               <a href="aboutme.html">About me</a></p>
+          </div>
 
-      <h3 class="sec-header">Just few thoughts that I like to say out loud.</h3>
-  </div>
+    </div>
+<div class="second-body">
     <div class="left">
-        <p calss="pad">Every thing in my blog is just a thought that I think it is worth to be heared by the people around me,
-        it doesnot harm anybody to write them for the years.</p>
-        <p class="organize">In fact, I think that I should write down my thoughts for many reasons:</p>
+            <p calss="pad">Every thing in my blog is just a thought that I think it is worth to be heared by the people around me,
+            it doesnot harm anybody to write them for the years.</p>
+            <p class="organize">In fact, I think that I should write down my thoughts for many reasons:</p>
+              <ul>
+                <li>Say your word before it dies, it will deffenitely know its way.</li>
+                <li>To track the changes that happend to my mind through the years,
+                  and as a picture shouw you what happend to your face, a thought will show you what happend to your brain.</li>
+                <li>If I have a spisific concern and I think I should say it, it could target someone who may make a change!</li>
+                <li>Thoughts are always a treasure, if not for today, they will be tomorrow.</li>
+              </ul>
+    </div>
+
+    <div class="side-bar">
+          <p>My favorite web pages:</p>
           <ul>
-            <li>Say your word before it dies, it will deffenitely know its way.</li>
-            <li>To track the changes that happend to my mind through the years,
-              and as a picture shouw you what happend to your face, a thought will show you what happend to your brain.</li>
-            <li>If I have a spisific concern and I think I should say it, it could target someone who may make a change!</li>
-            <li>Thoughts are always a treasure, if not for today, they will be tomorrow.</li>
+            <li><a href="https://ayaatalk.wordpress.com">My first blog</a></li>
+            <li><a href="https://ayaatalk.wordpress.com">A good page</a></li>
+            <li><a href="about-me.html"> About me</a></li>
+
           </ul>
-    </div>
+        </div>
 
-    <div class="side-bar left">
-      <p>My favorite web pages:</p>
-      <ul>
-        <li><a href="https://ayaatalk.wordpress.com">My first blog</a></li>
-        <li><a href="https://ayaatalk.wordpress.com">A good page</a></li>
-        <li><a href="about-me.html"> About me</a></li>
-
-      </ul>
-    </div>
-    <h3><a href="about-me.html"> About me</a></h3>
-
-
-
-
-
-
+</div>
   </body>
 
 
