some new changes

--- a/blog.html
+++ b/blog.html
@@ -9,13 +9,13 @@
 
     <div style="background-image:url('images/header1.jpg')">
           <h1>AYA TALK BLOG</h1>
-          <h3 class="sec-header">Say your word before it dies, it will know its path.</h3>
 
           <div class="right-links">
             <p><a href="aboutme.html">About me</a>
-               <a href="aboutme.html">About me</a>
-               <a href="aboutme.html">About me</a></p>
+               <a href="aboutme.html">Main page</a>
+               <a href="aboutme.html">My blog</a></p>
           </div>
+          <h3 class="sec-header">Say your word before it dies, it will know its path.</h3>
 
     </div>
 <div class="second-body">
