change the name to index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <link href="css/bootstarp.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <title>Aya Talk</title>
   </head>
 
   <body>
-
+<div class="container">
     <div style="background-image:url('images/header1.jpg')">
           <h1>AYA TALK BLOG</h1>
 
@@ -22,7 +25,19 @@
     <div class="left">
             <p calss="pad">Every thing in my blog is just a thought that I think it is worth to be heared by the people around me,
             it doesnot harm anybody to write them for the years.</p>
+
+            <p>Here are some information about me</p>
+            <p>I love writing, The idea of spreading thoughts around is tottaly fun to me.</p>
+            <p class="bg-success">A lot of people may hate this or think that this oerson who is talking or spreading ideas is just boring, but no body can feel what that is, especially if they havenot tried it yet.</p>
+            <p></p>
+
+
+
+          <div class="panel panel-info">
+            <div class="panel-heading">
             <p class="organize">In fact, I think that I should write down my thoughts for many reasons:</p>
+          </div>
+          <div class="panel-body">
               <ul>
                 <li>Say your word before it dies, it will deffenitely know its way.</li>
                 <li>To track the changes that happend to my mind through the years,
@@ -30,6 +45,8 @@
                 <li>If I have a spisific concern and I think I should say it, it could target someone who may make a change!</li>
                 <li>Thoughts are always a treasure, if not for today, they will be tomorrow.</li>
               </ul>
+          </div>
+        </div>
     </div>
 
     <div class="side-bar">
@@ -43,7 +60,6 @@
         </div>
 
 </div>
+</div>
   </body>
-
-
 </html>
