--- a/about-me.html
+++ b/about-me.html
@@ -1,6 +1,9 @@
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <title>About me</title>
   </head>
@@ -12,8 +15,8 @@
 
 
     <div class="second-body">
-       <img class="right" src="images/ay.jpg" alt="personal picture" width="140px">
-      <h2 >Who is Aya?</h2>
+      <img class="right" src="images/ay.jpg" alt="personal picture" width="140px">
+      <h2 class="sub-headers">Who is Aya?</h2>
       <p class="regular">My name is Aya, I was born on August 23rd, 1990 in Gaza Strip - Palestine.
         I am a wife, a mom, a compouter Engineer and a blogger.</p>
 
